Task 9. Full details - fix invisible amenities

--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -93,6 +93,7 @@ h2 {
 	width: 100%;
 	/*height: 20%;*/
 	height: auto;
+	visibility: visible;
 }
 
 #amenities2 > h2 {
